src/objects/QQNBatchMSE__c.object
<CustomObject>
    <description>Mean square error for one training batch</description>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <label>BatchNumber</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletionTime__c</fullName>
        <label>CompletionTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MSE__c</fullName>
        <label>MSE</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TdqnId__c</fullName>
        <label>TdqnId</label>
        <referenceTo>QQNTruncatedDQN__c</referenceTo>
        <relationshipName>BatchMSE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>QQNBatchMSE</label>
    <nameField>
        <displayFormat>AIMSE-{0000000000}</displayFormat>
        <label>BatchMSE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>